fix: Contact form overlap

--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ textarea {
   flex-direction: column;
   text-align: center;
   transition: opacity 0.3s, height 0.3s;
+  z-index: 2;
 }
 
 .menu-button,
@@ -242,14 +243,18 @@ textarea {
 }
 
 .form-container {
-  height: 90%;
+  /* height: 82%; */
   justify-content: center;
   align-items: center;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .contact-form-con {
   width: 100%;
-  height: 404px;
+  /* height: 404px; */
   border-radius: 20px;
   margin: auto;
   background-color: #303030;
@@ -260,13 +265,14 @@ textarea {
   font-size: 2.2rem;
   font-weight: 100;
   padding-top: 13px;
+  margin-bottom: 10%;
 }
 
 .contact-form {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  height: 368.304px;
+  /* height: 368.304px; */
 }
 
 .inputs-con {
@@ -279,7 +285,7 @@ textarea {
 .message {
   width: 100%;
   height: 50px;
-  margin-bottom: 25px;
+  margin-bottom: 11%;
   outline: none;
   border: 0.5px solid rgba(255, 255, 255, 44%);
   border-radius: 6px;
@@ -291,7 +297,7 @@ textarea {
 
 .message {
   height: 86px;
-  margin-bottom: 0;
+  /* margin-bottom: 0; */
 }
 
 ::placeholder {
@@ -320,6 +326,7 @@ textarea {
   border: none;
   border-radius: 7px;
   background-color: white;
+  margin-bottom: 3%;
 }
 
 .submit-button:hover {
@@ -615,12 +622,12 @@ textarea {
 
   .contact-form-con {
     width: 458px;
-    height: 504px;
+    /* height: 100%; */
     padding: 10px;
   }
 
   .contact-form {
-    height: 100%;
+    /* height: 100%; */
   }
 
   .say-hi {
